tests/str_slice_mut_bad.stderr
tests/str_slice_mut_bad.hop:4:17: error: HOP2004: type mismatch: cannot use 'r' of type &str as *[u8]
